# nfactorial-homeworks

./: .gitignore
HW_Backend_1_WSGI_FastAPI/: README.md  fastapi_app.py  requirements.txt  server_ping_pong.py  server_request_info.py
assignment10-11/: hw.py
assignment12/: hw.py
assignment13/: README.md  read_file.py  test.txt  write_file.py
assignment14/: calc.py  pyproject.toml  test_calc.py  test_main.py
assignment15/: hw.py
assignment16/: hw.py
assignment17_Rational databases/: hw.sql
assignment6/: main.py
assignment7/: hw.py  test_hw.py
assignment8/: hw.py
assignment9/: hw.py
backend_project_1_voxpop/: README.md  main.py
hw-backend-10/: http_requests.txt
hw-backend-11/: HW Backend 11_ Docker .txt
hw-backend-12/: http_requests_2.txt
hw-backend-13/: README.md  pyproject.toml
hw-backend-14/: README.md  README.txt  db.sqlite3  manage.py  pyproject.toml
hw-backend-14/hw_backend_14_news/: asgi.py  settings.py  urls.py  wsgi.py
hw-backend-14/news/: admin.py  api_urls.py  forms.py  models.py  tests.py  urls.py  views.py
hw-backend-14/news/migrations/: 0001_initial.py  0002_like.py  0003_comment_author_news_author.py
hw-backend-14/news/templates/: base.html
hw-backend-14/news/templates/news/: news_detail.html  news_form.html  news_list.html  news_update.html  sign_up.html
hw-backend-14/news/templates/registration/: login.html
hw-backend-2/: README.md
hw-backend-4/: README.md
hw-backend-5/: README.md
hw-backend-6/: main.py  repositories.py  requirements.txt
hw-backend-7/: main.py  repositories.py  requirements.txt
(+63 files in other folders)
