[tool.poetry]
name = "assignment14-pack"
version = "0.1.0"
description = "assignment14 poetry test"
authors = ["Baglan Orazbayev <or.baglane@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
